--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-calendly": "^4.4.0",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "react-markdown": "^9.0.1",
     "rehype-pretty-code": "^0.13.2",
     "rehype-stringify": "^10.0.0",
